# codetracer-python-recorder

./: .#agents.just  .coverage  .editorconfig  .envrc  .gitignore  AGENTS.md  AUDIT-CTFS-2026-05.md  CLAUDE.md  Justfile  Makefile  README.md  agents.just  ai.just  env.ps1  env.sh  flake.nix  issues-overview.md  issues.md  pm-faq.md  pyproject.toml  repro.nim  tf.toml
.agents/: codex-setup
.archive/: issues-2025-09-09.md
.config/: nextest.toml
.devcontainer/: README.md  devcontainer.json
.github/: sibling-pins
codetracer/: __init__.py
codetracer-pure-python-recorder/: README.md  pyproject.toml
codetracer-python-recorder/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
codetracer-python-recorder/benches/: trace_filter.rs
codetracer-python-recorder/benchmarks/: assignment_reconstructor.md
codetracer-python-recorder/codetracer_python_recorder/: __init__.py  __main__.py  api.py  auto_start.py  cli.py  formats.py  session.py  trace_balance.py
codetracer-python-recorder/codetracer_python_recorder/middleware/: __init__.py  asgi.py  wsgi.py
codetracer-python-recorder/crates/recorder-errors/: Cargo.toml
codetracer-python-recorder/crates/recorder-errors/src/: lib.rs
codetracer-python-recorder/resources/trace_filters/: builtin_default.toml  builtin_pytest.toml  builtin_unittest.toml
codetracer-python-recorder/scripts/: check_trace_balance.py  render_rust_coverage_summary.py
codetracer-python-recorder/src/: code_object.rs  errors.rs  ffi.rs  lib.rs  logging.rs  module_identity.rs  policy.rs  runtime_tracer.rs  session.rs  tracer.rs
codetracer-python-recorder/src/logging/: logger.rs  metrics.rs  trailer.rs
codetracer-python-recorder/src/monitoring/: api.rs  callbacks.rs  install.rs  mod.rs  tracer.rs
codetracer-python-recorder/src/policy/: env.rs  ffi.rs  model.rs  test_support.rs
codetracer-python-recorder/src/runtime/: activation.rs  assignment_reconstructor.rs  autoformat.rs  frame_inspector.rs  io_lines.rs  line_snapshots.rs  mod.rs  output_paths.rs  thread_snapshots.rs  trace_writer_host.rs  value_capture.rs  value_encoder.rs  value_filters.rs
codetracer-python-recorder/src/runtime/io_capture/: events.rs  fd_mirror.rs  install.rs  mod.rs  proxies.rs  sink.rs  unix.rs  windows.rs
codetracer-python-recorder/src/runtime/io_capture/fd_mirror/: unix.rs
codetracer-python-recorder/src/runtime/io_capture/sink/: batcher.rs  enricher.rs  mod.rs  types.rs
codetracer-python-recorder/src/runtime/tracer/: events.rs  filtering.rs  io.rs  lifecycle.rs  mod.rs  runtime_tracer.rs
codetracer-python-recorder/src/session/: bootstrap.rs
codetracer-python-recorder/src/session/bootstrap/: filesystem.rs  filters.rs  metadata.rs
codetracer-python-recorder/src/trace_filter/: config.rs  engine.rs  loader.rs  mod.rs  model.rs  selector.rs  summary.rs
codetracer-python-recorder/test/: test_codetracer_api.py  test_locals_snapshot.py  test_monitoring_events.py
codetracer-python-recorder/tests/: README.md  code_object_wrapper.rs  print_tracer.rs  test_fail_fast_on_py_start.py  verify-cli-convention-no-silent-skip.sh
codetracer-python-recorder/tests/data/values/: advanced.json  basic.json  collections.json  numerics.json  ranges.json  sets.json  structured.json  temporal.json  text_binary.json
codetracer-python-recorder/tests/python/: test_cli_integration.py  test_codetracer_api.py  test_column_aware_steps.py  test_exit_payloads.py  test_hcr.py  test_io_capture.py  test_monitoring_events.py  test_policy_runtime.py  test_pytest_integration.py  test_recorder_autoformat.py  test_trace_balance.py
codetracer-python-recorder/tests/python/fixtures/hcr/: hcr_test_program.py  mymodule_v1.py  mymodule_v2.py
codetracer-python-recorder/tests/python/perf/: test_trace_filter_perf.py
codetracer-python-recorder/tests/python/support/: ctfs.py
codetracer-python-recorder/tests/python/unit/: test_auto_start.py  test_backend_exceptions.py  test_cli.py  test_policy_configuration.py  test_session_helpers.py  test_value_encoding_contract.py
codetracer-python-recorder/tests/rust/: print_tracer.rs
crates/codetracer-python-recorder/: Cargo.toml  pyproject.toml
crates/codetracer-python-recorder/src/: lib.rs
crates/codetracer-python-recorder/test/: test_smoke.py
design-docs/: #code-object.md#  .#code-object.md  US0028 - Configurable Python trace filters.md  balanced-call-stack-events-implementation-plan.md  balanced-call-stack-events-implementation-plan.status.md  capture-output-implementation-plan.md  capture-output-implementation-plan.status.md  capture-output.md  code-object.md  codetracer-architecture-refactor-implementation-plan.md  codetracer-architecture-refactor-implementation-plan.status.md  codetracer-architecture-refactor-milestone-4-retrospective.md  codetracer-python-benchmarking-implementation-plan.md  codetracer-python-recorder-pypi-release-checklist.md  codetracer-python-recorder-pypi-release-implementation-plan.md  codetracer-python-recorder-pypi-release-implementation-plan.status.md  codetracer-python-recorder-release-operations.md  configurable-trace-filters-implementation-plan.md  configurable-trace-filters-implementation-plan.status.md  design-001.md  encode-values.md  error-handling-implementation-plan.md  error-handling-implementation-plan.status.md  expanded-value-encoding-implementation-plan.md  expanded-value-encoding-implementation-plan.status.md  file-level-srp-refactor-plan.md  file-level-srp-refactor-plan.status.md  function-level-srp-refactor-plan.md  function-level-srp-refactor-plan.status.md  io-capture-line-proxy-implementation-plan.md  io-capture-line-proxy-implementation-plan.status.md  jj-workspaces.md  module-call-event-naming-implementation-plan.md  module-call-event-naming-implementation-plan.status.md  module-name-resolution-deep-review.md  module-name-resolution-globals-implementation-plan.md  module-name-resolution-globals-implementation-plan.status.md  only-real-filenames.md  py-api-001.md  python-recorder-db-backend-implementation-plan.md  (+15 more)
examples/: README.md  abcd.py  basic_args.py  classes_methods.py  exceptions.py  (+13 more)
(+71 files in other folders)
