[project]
name = "codetracer-python-recorders"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = []

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
  "codetracer-python-recorder",
  "codetracer-pure-python-recorder",
]

[tool.uv.sources]
codetracer-python-recorder = {workspace= true}
codetracer-pure-python-recorder = {workspace= true}

[tool.ruff]
line-length = 100

[tool.pyright]
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

