[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codetracer-pure-python-recorder"
version = "0.1.0"
description = "Pure-Python prototype recorder producing CodeTracer traces"
authors = [{name = "Metacraft Labs Ltd"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools]
py-modules = ["trace"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
codetracer-record = "codetracer_pure_python_recorder.cli:main"
codetracer-record-pure = "codetracer_pure_python_recorder.cli:main"
