[project]
name = "codetracer-python-recorders"
version = "0.2.0"
requires-python = ">=3.8"
dependencies = []

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
  "codetracer-python-recorder",
  "codetracer-pure-python-recorder",
]

[tool.uv.sources]
codetracer-python-recorder = {workspace= true}
codetracer-pure-python-recorder = {workspace= true}

[tool.ruff]
line-length = 100

[tool.pyright]
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.0",
]

test = [
  "codetracer-python-recorder",
  "codetracer-pure-python-recorder"
]
