[workspace]
members = ["crates/recorder-errors"]
default-members = [".", "crates/recorder-errors"]
resolver = "2"

[package]
name = "codetracer-python-recorder"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust-backed Python module for CodeTracer recording (PyO3)"
repository = "https://github.com/metacraft-labs/codetracer-python-recorder"

[lib]
name = "codetracer_python_recorder"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.25.1" }
runtime_tracing = "0.14.0"
bitflags = "2.4"
once_cell = "1.19"
dashmap = "5.5"
log = { version = "0.4", features = ["kv"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
recorder-errors = { version = "0.1.0", path = "crates/recorder-errors" }

[dev-dependencies]
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
tempfile = "3.10"
