[workspace]
members = ["crates/recorder-errors"]
default-members = [".", "crates/recorder-errors"]
resolver = "2"

[package]
name = "codetracer-python-recorder"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust-backed Python module for CodeTracer recording (PyO3)"
repository = "https://github.com/metacraft-labs/codetracer-python-recorder"

[lib]
name = "codetracer_python_recorder"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
integration-test = []
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.25.1" }
runtime_tracing = "0.14.0"
base64 = "0.22"
bitflags = "2.4"
once_cell = "1.19"
dashmap = "5.5"
log = { version = "0.4", features = ["kv"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
recorder-errors = { version = "0.1.0", path = "crates/recorder-errors" }
crossbeam-channel = "0.5"
libc = "0.2"

[dev-dependencies]
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
tempfile = "3.10"

[target.'cfg(unix)'.dev-dependencies]
os_pipe = "1.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
] }
