[workspace]
members = ["crates/recorder-errors"]
default-members = [".", "crates/recorder-errors"]
resolver = "2"

[package]
name = "codetracer-python-recorder"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust-backed Python module for CodeTracer recording (PyO3)"
repository = "https://github.com/metacraft-labs/codetracer-python-recorder"

[lib]
name = "codetracer_python_recorder"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
integration-test = []
default = ["extension-module"]

[dependencies]
pyo3 = { version = "0.25.1" }
codetracer_trace_types = { path = "../../codetracer-trace-format/codetracer_trace_types" }
codetracer_trace_writer = { path = "../../codetracer-trace-format/codetracer_trace_writer" }
codetracer_trace_writer_nim = { path = "../../codetracer-trace-format/codetracer_trace_writer_nim" }
codetracer_ctfs = { path = "../../codetracer-trace-format/codetracer_ctfs" }
# TF-M6: trace-filter implementation extracted to the shared format-crate
# workspace.  The Python recorder is the first consumer; future Ruby / EVM /
# JS recorders will depend on the same crate (or its FFI surface).
codetracer_trace_filter = { path = "../../codetracer-trace-format/codetracer_trace_filter" }
bitflags = "2.4"
once_cell = "1.19"
dashmap = "5.5"
log = { version = "0.4", features = ["kv"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
recorder-errors = { version = "0.1.0", path = "crates/recorder-errors" }
libc = "0.2"

[dev-dependencies]
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "trace_filter"
harness = false
