[project]
name = "codetracer-python-recorder"
version = "0.1.0"
description = "Low-level Rust-backed Python module for CodeTracer recording (PyO3)"
authors = [{name = "Metacraft Labs Ltd"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
]

[tool.maturin]
# Build the PyO3 extension module
bindings = "pyo3"
# Use the library name as the Python import name: codetracer_python_recorder

[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"
