[project]
name = "codetracer-python-recorder"
version = "0.3.0"
description = "Low-level Rust-backed Python module for CodeTracer recording (PyO3)"
authors = [{name = "Metacraft Labs Ltd"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Debuggers",
]

# Runtime dependencies.  `black` is bundled so the recorder's
# autoformat pass (P6.2-Python — pre-format minified sources at
# record time and bake the formatted view + V3 sourcemap into
# srcviews.dat) is always available without relying on system PATH.
# Per the user directive 2026-06-11: "language-specific formatting
# tools that CodeTracer uses should be provisioned by the recorder
# package for the particular language."
dependencies = [
    "black>=25.0,<26.0",
]

[project.scripts]
codetracer-python-recorder = "codetracer_python_recorder.cli:main"

# Convention-compliance shell guard.  Wired up so it can be invoked
# directly via `python -m pytest -k verify_cli_convention` (the Python
# tests cover the same surface but the shell guard remains the source
# of truth; see tests/verify-cli-convention-no-silent-skip.sh).
[tool.codetracer.scripts]
verify-cli-convention = "tests/verify-cli-convention-no-silent-skip.sh"

[project.urls]
Homepage = "https://github.com/metacraft-labs/codetracer-python-recorder/tree/main/codetracer-python-recorder"
Repository = "https://github.com/metacraft-labs/codetracer-python-recorder"
Issues = "https://github.com/metacraft-labs/codetracer-python-recorder/issues"
Changelog = "https://github.com/metacraft-labs/codetracer-python-recorder/releases"

[tool.maturin]
# Build the PyO3 extension module
bindings = "pyo3"
# Use the library name as the Python import name: codetracer_python_recorder

[tool.maturin.sdist]
include = [
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "src/**",
    "codetracer_python_recorder/**",
]
exclude = [
    "target/**",
    "codetracer_python_recorder/*.so",
]

[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"
