[package]
name = "codetracer-python-recorder"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust-backed Python module for CodeTracer recording (PyO3)"
repository = "https://github.com/metacraft-labs/codetracer-python-recorder"

[lib]
name = "codetracer_python_recorder"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
